[Feature #161363372] Add test on menu manipulation Add test on user profile Add test on admin profile Add more tests to user signup Add more tests to user login Add more tests to add_food add more tests to menu and order creation Fix error text size for small screens

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "scripts": {
-        "test": "jest"
+        "test": "jest",
+        "jest-coverage": "yarn run jest -- --coverage"
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
