[Fix #161363372] Rename js variables

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-# ignore node file
-node_modules/
-
-#ignore coverage file
 coverage/
+node_modules/
+UI/spec
+UI/tests
 
-#ignore package lock gile
-package-lock.json
